--- a/app/templates/plans/matrix_indicator_load.html
+++ b/app/templates/plans/matrix_indicator_load.html
@@ -6,7 +6,9 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col">
-      <h5 class="fw-normal text-center text-primary mt-2 mb-2">{{ plan_name }}</h5>
+      <h5 class="fw-normal text-center text-primary mt-2 mb-2">
+        <a href="{{ url }}/plan/plans/{{ plan_id }}" target="_blank">{{ plan_name }}</a>
+      </h5>
     </div>
   </div>
   <div class="row justify-content-center mb-3">
