--- a/app/templates/plans/competencies_load.html
+++ b/app/templates/plans/competencies_load.html
@@ -8,7 +8,9 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col">
-      <h5 class="fw-normal text-center text-primary mb-3">{{ plan_name }}<br></h5>
+      <h5 class="fw-normal text-center text-primary mb-3">
+        <a href="{{ url }}/plan/plans/{{ plan_id }}" target="_blank">{{ plan_name }}</a>
+      </h5>
     </div>
   </div>
 </div>
