--- a/app/templates/programs/fields.html
+++ b/app/templates/programs/fields.html
@@ -6,7 +6,9 @@
   </h3>
 </div>
 <div class="col">
-  <h5 class="fw-normal text-center text-primary mt-2 mb-3">{{ plan_name }}<br /></h5>
+  <h5 class="fw-normal text-center text-primary mt-2 mb-3">
+    <a href="{{ url }}/plan/plans/{{ plan_id }}" target="_blank">{{ plan_name }}</a>
+  </h5>
 </div>
 <form method="post">
   {{ form.hidden_tag() }}
