--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -138,7 +138,7 @@
                   {% if current_user.is_authenticated %}
                     <div class="nav-item dropdown no-arrow">
                       <a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#">
-                        <span class="text-capitalize d-none d-lg-inline me-2 text-gray-600 small">{{ current_user }}</span>
+                        <span class="text-uppercase d-none d-lg-inline me-2 text-gray-600 small">{{ current_user }}</span>
                         <i class="far fa-check-square" style="font-size: 16px;color: var(--bs-green);"></i>
                       </a>
                       <div class="dropdown-menu shadow dropdown-menu-end animated--grow-in">
