favicon.ico added (fix errors)

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,6 +6,7 @@
     <title>Расширения Апекс-ВУЗ - {% block title %}{% endblock %}</title>
     <meta property="og:type" content="website">
     <meta name="description" content="Расширения базовых функций Апекс-ВУЗ">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicons/favicon.ico') }}">
     <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="{{ url_for('static', filename='img/favicons/apple-touch-icon.png') }}">
     <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='img/favicons/favicon-16x16.png') }}">
     <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='img/favicons/favicon-32x32.png') }}">
