--- a/app/templates/programs/program_data.html
+++ b/app/templates/programs/program_data.html
@@ -8,7 +8,7 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col">
-      <h5 class="fw-normal text-center text-primary">
+      <h5 class="fw-bold text-center text-primary">
         <a href="{{ url }}/plan/plans/{{ plan_id }}" target="_blank">{{ plan_name }}</a>
       </h5>
     </div>
