--- a/app/templates/programs/title_pages.html
+++ b/app/templates/programs/title_pages.html
@@ -8,8 +8,8 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col">
-      <h5 class="fw-normal text-center text-primary mt-2 mb-3">
-        {{ plan_name }}
+      <h5 class="fw-bold text-center text-primary mt-2 mb-3">
+        <a href="{{ url }}/plan/plans/{{ plan_id }}" target="_blank">{{ plan_name }}</a>
       </h5>
     </div>
   </div>
