--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -87,6 +87,7 @@
                 <a class="dropdown-item text-center py-1" href="{{ url_for('programs.dept_check') }}">Проверка по кафедре</a>
                 {% if current_user.role in (config.ROLE_ADMIN, ) %}
                   <a class="dropdown-item text-center py-1" href="{{ url_for('programs.dates_update') }}">Обновление дат</a>
+                  <a class="dropdown-item text-center py-1" href="{{ url_for('programs.base_template') }}">Базовый шаблон</a>
                 {% endif %}
                 {% if current_user.role in (config.ROLE_ADMIN, config.ROLE_METOD, config.ROLE_BIBL) %}
                   <a class="dropdown-item text-center py-1" href="{{ url_for('programs.fields_choose_plan') }}">Значения полей</a>
