template app update

--- a/app/templates/programs/base_template.html
+++ b/app/templates/programs/base_template.html
@@ -7,51 +7,29 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-10 col-xl-8">
-        <div class="row mb-2">
-          <div class="col-md-12">
-            <div class="mb-2">
-              <label id="edu_spec_label-1" class="form-label text-dark" name="edu_spec_label">
-                <span style="color: rgb(33, 37, 41); background-color: rgb(245, 245, 245);">Специальность:</span>
-              </label>
-              <select id="edu_spec-1" class="form-select" name="edu_spec">
-                    <option value="12" selected>This is item 1</option>
-                    <option value="13">This is item 2</option>
-                    <option value="14">This is item 3</option>
-              </select>
-            </div>
-            <div class="mb-2">
-              <button id="spec_choose" class="btn btn-secondary border-0" type="submit" name="spec_choose">Выбор</button>
-            </div>
-          </div>
+        <div class="mb-2">
+          {{ form.edu_spec.label(class="text-dark") }}
+          {{ form.edu_spec(class="form-select") }}
         </div>
-        <div class="row mb-2">
-          <div class="col">
-            <label class="form-label text-dark" id="edu_plan" name="">План:</label>
-            <select class="form-select" id="edu_plan" name="edu_plan">
-                <optgroup label="Выберите год:">
-                    <option value="13">This is item 2</option>
-                    <option value="14">This is item 3</option>
-                </optgroup>
-            </select>
-          </div>
+        <div class="mb-2">
+          {{ form.spec_choose(class="btn btn-secondary border-0") }}
         </div>
-        <div class="row mb-2">
-          <div class="col-md-12">
-            <label class="form-label text-dark" id="edu_spec_label" name="edu_spec_label">
-              <span style="color: rgb(33, 37, 41); background-color: rgb(245, 245, 245);">Шаблон:</span>
-            </label>
-            <select class="form-select" id="edu_spec" name="edu_spec">
-                <option value="12" selected="">This is item 1</option>
-                <option value="13">This is item 2</option>
-                <option value="14">This is item 3</option>
-            </select>
+        {% if edu_spec %}
+          <div class="mb-2">
+            {{ form.edu_plan.label(class="text-dark") }}
+            {{ form.edu_plan(class="form-select") }}
           </div>
-        </div>
-        <div class="row mt-4 mb-2">
-          <div class="col">
-            <button class="btn btn-success fw-normal link-light" id="dates_update" type="button" style="background: #008751;font-weight: bold;border-style: none;width: 100%;" name="dates_update">Обновить данные</button>
+          <div class="mb-2">
+            {{ form.template.label(class="text-dark") }}
+            {{ form.template(class="form-select") }}
           </div>
-        </div>
+          <div class="mt-4 mb-2">
+            {{ form.base_template_update(class="btn btn-success fw-normal link-light", style="background: #008751;font-weight: bold;border-style: none;width: 100%;", type="submit") }}
+          </div>
+          <div class="mt-4 mb-2">
+            {{ form.base_template_remove(class="btn btn-warning fw-normal link-light", style="background: #008751;font-weight: bold;border-style: none;width: 100%;", type="submit") }}
+          </div>
+        {% endif %}
       </div>
     </div>
   </div>
