--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -67,11 +67,11 @@
                   <i class="fas fa-layer-group"></i><span>Учебные планы</span>
                 </a>
                 <div class="dropdown-menu text-center py-0">
-                  {% if current_user.role in (config.ROLE_ADMIN, ) %}
+                  {% if current_user.role in (config.ROLE_ADMIN, config.ROLE_METOD) %}
                     <a class="dropdown-item text-center py-1" href="{{ url_for('plans.competencies_choose_plan') }}">Загрузка компетенций</a>
                   {% endif %}
                   <a class="dropdown-item text-center py-1" href="{{ url_for('plans.matrix_simple_choose_plan') }}">Матрица простая</a>
-                  {% if current_user.role in (config.ROLE_ADMIN, ) %}
+                  {% if current_user.role in (config.ROLE_ADMIN, config.ROLE_METOD) %}
                     <a class="dropdown-item text-center py-1" href="{{ url_for('plans.matrix_indicator_choose_plan') }}">Матрица с индикаторами</a>
                   {% endif %}
                   <a class="dropdown-item text-center py-1" href="{{ url_for('plans.matrix_indicator_file') }}">Индикаторы по дисциплинам</a>
