--- a/app/templates/plans/matrix_indicator_load.html
+++ b/app/templates/plans/matrix_indicator_load.html
@@ -42,7 +42,7 @@
         <div class="row" style="text-align: center;">
           <div class="col-md-6">
             {{ form.data_template(class="btn btn-warning", style="width: 100%;font-weight: bold;border-style: none;") }}
-            <small class="form-text" style="text-align: center;">(образец файла для загрузки из GoogleDocs)</small>
+            <small class="form-text" style="text-align: center;">(образец файла для загрузки)</small>
           </div>
         </div>
       </div>
