--- a/app/templates/tools/rewriter.html
+++ b/app/templates/tools/rewriter.html
@@ -19,9 +19,28 @@
               {% endif %}
             <br>
           </h4>
+          <div class="row mb-3">
+            <div class="col">
+              <small class="form-text">Параметры:</small>
+            </div>
+            <div class="input-group">
+              <span class="text-secondary text-bg-light input-group-text">{{ form.temperature.label }}</span>
+              {{ form.temperature(class="form-control", type="number", min="0.1", max="1.00", step="0.05") }}
+              <span class="text-secondary text-bg-light input-group-text">{{ form.top_k.label }}</span>
+              {{ form.top_k(class="form-control", type="number", min="5", max="100", step="5") }}
+              <span class="text-secondary text-bg-light input-group-text">{{ form.top_p.label }}</span>
+              {{ form.top_p(class="form-control", type="number", min="0.1", max="1.00", step="0.05") }}
+            </div>
+            <div class="input-group">
+              <span class="text-secondary text-bg-light input-group-text">{{ form.repetition_penalty.label }}</span>
+              {{ form.repetition_penalty(class="form-control", type="number", min="0.5", max="5", step="0.1") }}
+              <span class="text-secondary text-bg-light input-group-text">{{ form.num_return_sequences.label }}</span>
+              {{ form.num_return_sequences(class="form-control", type="number", min="2", max="15", step="1") }}
+            </div>
+          </div>
           <div class="row">
             <div class="col">
-              <div class="card shadow mb-2">
+              <div class="card shadow mb-3">
                 <div class="card-header py-3">
                   {{ form.rewriter_text.label(class="text-center text-primary m-0 fw-bold") }}
                 </div>
@@ -36,6 +55,21 @@
               {{ form.do_rewrite(class="btn btn-info link-light", type="submit", style="width: 100%;font-weight: bold;border-style: none;") }}
             </div>
           </div>
+          {% if text_all %}
+            <div>
+              <a class="btn btn-light btn-sm border rounded-pill shadow-sm" data-bs-toggle="collapse" aria-expanded="false" aria-controls="collapse-1" href="#collapse-1" role="button">
+                Все версии
+              </a>
+              <div class="collapse" id="collapse-1">
+                <div>
+                {% for paragraph in text_all %}
+                <p style="white-space: pre-line; text-align: justify; padding-left: 7px;">{{ "\n".join(paragraph) }}</p>
+                <p></p>
+                {% endfor %}
+                </div>
+              </div>
+            </div>
+          {% endif %}
           {% if text %}
             <div class="table-responsive">
               <table class="table my-0" id="dataTable">
@@ -48,7 +82,7 @@
                   <tbody>
                     {% for paragraph in text.get(score_method) %}
                       <tr>
-                        <td>{{ paragraph }}</td>
+                        <td style="text-align: justify;">{{ paragraph }}</td>
                       </tr>
                     {% endfor %}
                   </tbody>
