--- a/app/templates/tools/rewriter.html
+++ b/app/templates/tools/rewriter.html
@@ -90,6 +90,9 @@
               </table>
             </div>
           {% endif %}
+          {% if error %}
+            {{ error }}
+          {% endif %}
         </div>
       </div>
     </div>
