--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -39,19 +39,6 @@
                 <span>Главная</span>
               </a>
             </li>
-            {% if current_user.is_authenticated and current_user.role in (config.ROLE_ADMIN, ) %}
-              <!-- Администрирование -->
-              <li class="nav-item dropdown">
-                <a class="dropdown-toggle nav-link py-2" aria-expanded="false" data-bs-toggle="dropdown" data-bs-auto-close="false" href="#">
-                  <i class="fas fa-user-cog"></i>
-                  <span>Пользователи</span>
-                </a>
-                  <div class="dropdown-menu text-center py-0">
-                    <a class="dropdown-item text-center py-1" href="{{ url_for('auth.register') }}">Регистрация</a>
-                    <a class="dropdown-item text-center py-1" href="{{ url_for('admin.index') + 'user' }}">Управление</a>
-                  </div>
-              </li>
-            {% endif %}
             <!-- Расписание -->
             <li class="nav-item text-start"><a class="nav-link py-2" href="{{ url_for('schedule.schedule') }}">
               <i class="far fa-calendar-alt"></i><span>Расписание</span></a>
@@ -60,18 +47,18 @@
             <li class="nav-item"><a class="nav-link py-2" href="{{ url_for('load.load_report') }}">
               <i class="fas fa-receipt"></i><span>Отчет о нагрузке</span></a>
             </li>
-            {% if current_user.is_authenticated and current_user.role in (config.ROLE_ADMIN, config.ROLE_METOD) %}
+            {% if current_user.is_authenticated and current_user.role.slug in (config.ROLE_ADMIN, config.ROLE_METOD) %}
               <!-- Учебные планы -->
               <li class="nav-item dropdown">
                 <a class="dropdown-toggle nav-link py-2" aria-expanded="true" data-bs-toggle="dropdown" data-bs-auto-close="false" href="#">
                   <i class="fas fa-layer-group"></i><span>Учебные планы</span>
                 </a>
                 <div class="dropdown-menu text-center py-0">
-                  {% if current_user.role in (config.ROLE_ADMIN, config.ROLE_METOD) %}
+                  {% if current_user.role.slug in (config.ROLE_ADMIN, config.ROLE_METOD) %}
                     <a class="dropdown-item text-center py-1" href="{{ url_for('plans.competencies_choose_plan') }}">Загрузка компетенций</a>
                   {% endif %}
                   <a class="dropdown-item text-center py-1" href="{{ url_for('plans.matrix_simple_choose_plan') }}">Матрица простая</a>
-                  {% if current_user.role in (config.ROLE_ADMIN, config.ROLE_METOD) %}
+                  {% if current_user.role.slug in (config.ROLE_ADMIN, config.ROLE_METOD) %}
                     <a class="dropdown-item text-center py-1" href="{{ url_for('plans.matrix_indicator_choose_plan') }}">Матрица с индикаторами</a>
                   {% endif %}
                   <a class="dropdown-item text-center py-1" href="{{ url_for('plans.matrix_indicator_file') }}">Индикаторы по дисциплинам</a>
@@ -85,32 +72,32 @@
               </a>
               <div class="dropdown-menu text-center py-0">
                 <a class="dropdown-item text-center py-1" href="{{ url_for('programs.dept_check') }}">Проверка по кафедре</a>
-                {% if current_user.role in (config.ROLE_ADMIN, ) %}
+                {% if current_user.role.slug in (config.ROLE_ADMIN, ) %}
                   <a class="dropdown-item text-center py-1" href="{{ url_for('programs.dates_update') }}">Обновление дат</a>
                   <a class="dropdown-item text-center py-1" href="{{ url_for('programs.base_template') }}">Базовый шаблон</a>
                 {% endif %}
-                {% if current_user.role in (config.ROLE_ADMIN, config.ROLE_METOD, config.ROLE_BIBL) %}
+                {% if current_user.role.slug in (config.ROLE_ADMIN, config.ROLE_METOD, config.ROLE_BIBL) %}
                   <a class="dropdown-item text-center py-1" href="{{ url_for('programs.fields_choose_plan') }}">Значения полей</a>
                 {% endif %}
-                {% if current_user.role in (config.ROLE_ADMIN, config.ROLE_METOD) %}
+                {% if current_user.role.slug in (config.ROLE_ADMIN, config.ROLE_METOD) %}
                   <a class="dropdown-item text-center py-1" href="{{ url_for('programs.program_data_choose_plan') }}">Общая информация</a>
                   <a class="dropdown-item text-center py-1" href="{{ url_for('programs.title_pages_choose_plan') }}">Титульные листы</a>
                 {% endif %}
               </div>
             </li>
-            {% if current_user.is_authenticated and current_user.role in (config.ROLE_ADMIN, config.ROLE_METOD, config.ROLE_BIBL) %}
+            {% if current_user.is_authenticated and current_user.role.slug in (config.ROLE_ADMIN, config.ROLE_METOD, config.ROLE_BIBL) %}
               <!-- Обеспечение -->
               <li class="nav-item dropdown">
                 <a class="dropdown-toggle nav-link py-2" aria-expanded="false" data-bs-toggle="dropdown" data-bs-auto-close="false" href="#">
                   <i class="fas fa-book-open"></i><span>Обеспечение</span>
                 </a>
                 <div class="dropdown-menu text-center py-0">
-                  {% if current_user.role in (config.ROLE_ADMIN, config.ROLE_BIBL) %}
+                  {% if current_user.role.slug in (config.ROLE_ADMIN, config.ROLE_BIBL) %}
                     <a class="dropdown-item text-center py-1" href="{{ url_for('library.library_choose_plan') }}">Список литературы</a>
                     <a class="dropdown-item text-center py-1" href="{{ url_for('library.library_int_choose_plan') }}">Интернет ресурсы</a>
                     <a class="dropdown-item text-center py-1" href="{{ url_for('library.library_db_choose_plan') }}">Базы и справочные системы</a>
                   {% endif %}
-                  {% if current_user.role in (config.ROLE_ADMIN, config.ROLE_METOD) %}
+                  {% if current_user.role.slug in (config.ROLE_ADMIN, config.ROLE_METOD) %}
                     <a class="dropdown-item text-center py-1" href="{{ url_for('library.library_np_choose_plan') }}">Научная продукция</a>
                   {% endif %}
                 </div>
@@ -144,6 +131,10 @@
                         <i class="far fa-check-square" style="font-size: 16px;color: var(--bs-green);"></i>
                       </a>
                       <div class="dropdown-menu shadow dropdown-menu-end animated--grow-in">
+                        {% if current_user.role.slug in (config.ROLE_ADMIN, ) %}
+                          <a class="dropdown-item" href="{{ url_for('auth.users') }}">
+                            <i class="fas fa-sign-out-alt fa-sm fa-fw me-2 text-gray-400"></i>Пользователи</a>
+                        {% endif %}
                         <a class="dropdown-item" href="{{ url_for('auth.logout') }}">
                           <i class="fas fa-sign-out-alt fa-sm fa-fw me-2 text-gray-400"></i>Выйти</a>
                       </div>
@@ -178,7 +169,7 @@
         <footer class="bg-white sticky-footer" style="padding-top: 4px;padding-bottom: 4px;--bs-body-bg: #f8f9fc;">
           <div class="container my-auto">
             <div class="text-center my-auto copyright">
-              <span style="font-size: 9.8px;">Copyright © Evgeny Semenov, 2022 - <a href="/tools/rewriter">Tools</a></span>
+              <span style="font-size: 9.8px;">Copyright © Evgeny Semenov, 2021-2023 - <a href="/tools/rewriter">Tools</a></span>
             </div>
           </div>
         </footer>
