--- a/app/templates/auth/edit.html
+++ b/app/templates/auth/edit.html
@@ -2,51 +2,64 @@
 {% block title %}{{ title }}{% endblock %}
 {% block content %}
   <div class="container-fluid">
-    <h3 class="text-dark mb-1" style="text-align: center;">
-      {{ title }}
-    </h3>
+    <h3 class="text-dark mb-1" style="text-align: center;">{{ title }}</h3>
   </div>
-  <section class="clean-block clean-form" style="background: var(--bs-light);">
+  <section class="position-relative py-2 py-xl-2">
     <div class="container">
-      <form method="post">
-        {{ form.hidden_tag() }}
-        <div class="mb-3">
-          {{ form.username(class="form-control") }}
-          {% for error in form.username.errors %}
-            <span style="color: var(--bs-danger);">{{ error }}</span>
-          {% endfor %}
-        </div>
-        <div class="mb-3">
-          {{ form.password(class="form-control", placeholder=form.password.label.text) }}
-          {% for error in form.password.errors %}
-            <span style="color: var(--bs-danger);">{{ error }}</span>
-          {% endfor %}
-        </div>
-        <div class="mb-3">
-          {{ form.password2(class="form-control", placeholder=form.password2.label.text) }}
-          {% for error in form.password2.errors %}
-            <span style="color: var(--bs-danger);">{{ error }}</span>
-          {% endfor %}
-        </div>
-        <div class="mb-3">
-          <label>{{ form.role.label }}</label>
-          {{ form.role(class="form-select") }}
-          {% for error in form.role.errors %}
-            <span style="color: var(--bs-danger);">{{ error }}</span>
-          {% endfor %}
-        </div>
-        <div class="row">
-          <div class="col">
-            {{ form.submit(class="btn btn-primary") }}
+      <div class="row d-flex justify-content-center">
+        <div class="col-md-6 col-xl-4">
+          <div class="card mb-5">
+            <div class="card-body d-flex flex-column align-items-center">
+              <div class="bs-icon-xl bs-icon-circle bs-icon-primary bs-icon my-4">
+                <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-person-lines-fill">
+                  <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5zm.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1h-4zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1h-2zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1h-2z"></path>
+                </svg>
+              </div>
+              <form class="text-center" method="post" style="width: 250px;">
+                {{ form.hidden_tag() }}
+                <div class="mb-3">
+                  {{ form.username(class="form-control") }}
+                  {% for error in form.username.errors %}
+                    <span style="color: var(--bs-danger);">{{ error }}</span>
+                  {% endfor %}
+                </div>
+                <div class="mb-3">
+                  {{ form.password(class="form-control", placeholder=form.password.label.text) }}
+                  {% for error in form.password.errors %}
+                    <span style="color: var(--bs-danger);">{{ error }}</span>
+                  {% endfor %}
+                </div>
+                <div class="mb-3">
+                  {{ form.password2(class="form-control", placeholder=form.password2.label.text) }}
+                  {% for error in form.password2.errors %}
+                    <span style="color: var(--bs-danger);">{{ error }}</span>
+                  {% endfor %}
+                </div>
+                <div class="mb-3">
+                  <label>{{ form.role.label }}</label>
+                  {{ form.role(class="form-select") }}
+                  {% for error in form.role.errors %}
+                    <span style="color: var(--bs-danger);">{{ error }}</span>
+                  {% endfor %}
+                </div>
+                <div class="mb-3">
+                  <div class="row">
+                    <div class="col">
+                      {{ form.submit(class="btn btn-primary d-block w-100") }}
+                    </div>
+                    <div class="col">
+                      <a class="btn btn-secondary d-block w-100" role="button" href="/users">Назад</a>
+                    </div>
+                  </div>
+                </div>
+                {% if form.form_errors %}
+                  <span id="error" class="text-danger" style="color: var(--bs-danger);">{{ form.form_errors }}</span>
+                {% endif %}
+              </form>
+            </div>
           </div>
-          <div class="col text-end">
-            <a class="btn btn-secondary" role="button" href="/users">Пользователи</a>
-          </div>
         </div>
-        {% if form.form_errors %}
-          <span id="error" class="text-danger" style="color: var(--bs-danger);">{{ form.form_errors }}</span>
-        {% endif %}
-      </form>
+      </div>
     </div>
   </section>
 {% endblock %}
