--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -133,7 +133,7 @@
                       <div class="dropdown-menu shadow dropdown-menu-end animated--grow-in">
                         {% if current_user.role.slug in (config.ROLE_ADMIN, ) %}
                           <a class="dropdown-item" href="{{ url_for('auth.users') }}">
-                            <i class="fas fa-sign-out-alt fa-sm fa-fw me-2 text-gray-400"></i>Пользователи</a>
+                            <i class="fas fa-user-alt fa-sm fa-fw me-2 text-gray-400"></i>Пользователи</a>
                         {% endif %}
                         <a class="dropdown-item" href="{{ url_for('auth.logout') }}">
                           <i class="fas fa-sign-out-alt fa-sm fa-fw me-2 text-gray-400"></i>Выйти</a>
