--- a/app/templates/plans/matrix_simple_load.html
+++ b/app/templates/plans/matrix_simple_load.html
@@ -46,7 +46,7 @@
               {{ form.make_matrix(class="btn btn-primary", style="width: 100%;font-weight: bold;border-style: none;border-color: var(--bs-dark);") }}
               <small class="form-text" style="text-align: center;">(скачать текущую матрицу в формате Excel)</small>
             </div>
-            {% if current_user.role in (config.ROLE_ADMIN, config.ROLE_METOD) %}
+            {% if current_user.role.slug in (config.ROLE_ADMIN, config.ROLE_METOD) %}
             <div class="col-md-6 col-md-4">
               {{ form.data_delete(class="btn btn-danger", style="width: 100%;font-weight: bold;border-style: none;") }}
               <small class="form-text">(удаление связей дисциплин и компетенций, и их содержимого из программ)</small>
@@ -55,7 +55,7 @@
           </div>
         </div>
       </div>
-      {% if current_user.role in (config.ROLE_ADMIN, config.ROLE_METOD) %}
+      {% if current_user.role.slug in (config.ROLE_ADMIN, config.ROLE_METOD) %}
         <div class="row justify-content-center">
           <div class="col-md-10 col-xl-8 mb-3">
             {{ form.file.label(class="form-label", style="color: var(--bs-dark);") }}
